data/derived/comb/progs/unify/prog0725.ml.out
Characters 23-60:
  let stringOfList f l = "[" ^ (sepConcat "; " (List.map f l)) & "]";;
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         bool
